:skull: Fix some spacing on large screen

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2942,6 +2942,12 @@ button:focus {
   }
 }
 
+@media (min-width: 992px) {
+  .page-head__action {
+    max-width: 945px;
+  }
+}
+
 .page-head__button {
   display: flex;
   align-items: center;
